argocd/apps/open-webui/open-webui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-web-ui
  namespace: open-web-ui
  annotations:
    argocd.argoproj.io/sync-wave: "20"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    tailscale.com/proxy-group: ingress-proxies
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: open-webui
      port:
        number: 80
  tls:
    - hosts:
        - ollama              # → ollama.<tailnet>.ts.net
